# Oxigotchi_Pwnagotchi-Gadget

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md
config/: angryoxide-v5.toml
docs/: ARCHITECTURE.md  BT_ATTACKS.md  BT_TETHERING.md  BULL_FACE_IDEAS.md  DEEP_ANALYSIS.md  DISPLAY_SPEC.md  RUSTY_V3.md  RUST_REWRITE_PLAN.md
faces/: CATALOG.md  add_metadata.py
plugin/: angryoxide.py  frame_padding.py  stub_client.py  walkby.py
rust/: Cargo.toml  README.md
rust/plugins/: ao_status.lua  aps.lua  bt_devices.lua  bt_summary.lua  crash.lua  ip_display.lua  mode.lua  uptime.lua
rust/src/: ao.rs  epoch.rs  main.rs  network.rs  radio.rs  rage.rs  timer.rs
rust/src/attacks/: mod.rs
rust/src/bluetooth/: capture.rs  dbus.rs  discovery.rs  mod.rs
rust/src/bluetooth/attacks/: att_fuzz.rs  ble_adv.rs  ble_hijack.rs  hci.rs  knob.rs  l2cap_conn_flood.rs  l2cap_fuzz.rs  l2cap_socket.rs  mod.rs  scan.rs  smp.rs  target.rs  vendor.rs
rust/src/bluetooth/model/: config.rs  observation.rs
rust/src/bluetooth/patchram/: hcd.rs  mod.rs
rust/src/capture/: mod.rs
rust/src/config/: mod.rs
rust/src/display/: buffer.rs  driver.rs  mod.rs
rust/src/firmware/: mod.rs
rust/src/gpu/runtime/: ingest.rs
rust/src/lua/: config.rs  mod.rs  state.rs
rust/src/migration/: mod.rs
rust/src/personality/: jokes.rs  messages.rs  mod.rs  variety.rs
rust/src/pisugar/: mod.rs
rust/src/qpu/: classifier.rs  engine.rs  mailbox.rs  mod.rs  rf.rs  ringbuf.rs
rust/src/recovery/: mod.rs
rust/src/web/: html.rs  mod.rs
rust/src/wifi/: mod.rs
scripts/: bt-keepalive.sh  buffer-cleaner.sh  fix_ndev_on_boot.sh  pisugar-watchdog.sh  safe-shutdown.sh  usb0-fallback.sh
services/: bootlog.service  bt-agent.service  bt-keepalive.service  bt-keepalive.timer  buffer-cleaner.service  buffer-cleaner.timer  emergency-ssh.service  epd-startup.service  fix-ndev.service  nm-watchdog.service  nm-watchdog.timer  oxigotchi-splash.service  pisugar-watchdog.service  pisugar-watchdog.timer  resize-rootfs.service  rusty-oxigotchi.service  (+5 more)
(+30 files in other folders)
