[package]
name = "oxigotchi"
version = "3.2.0"
edition = "2024"
description = "Rusty Oxigotchi — the Rust-forged WiFi capture bull for Pi Zero 2W"
license = "GPL-3.0"

[dependencies]
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
rand = "0.8"
profont = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
dbus-crossroads = "0.5"

[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
